# lang-framework

./: .gitignore  README.md  pyproject.toml
app/: chain.py  llm.py  main.py  model.py  vector.py
sample/: dataset.json
