[tool.poetry]
name = "lang-framework"
version = "0.1.0"
description = ""
authors = ["dongju93 <spdlqj011@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115"}
langchain = "^0.3"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3"
langchain-experimental = "^0.3"
langgraph = "^0.2"
langserve = "^0.3"
langsmith = "^0.1"
sse-starlette = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
