[project]
name = "lang-framework"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-experimental>=0.3",
    "langgraph>=0.2",
    "langserve>=0.3",
    "langsmith>=0.3",
    "sse-starlette>=2",
    "langchain-ollama>=0.2",
    "gunicorn>=23",
    "qdrant-client==1.12.1",
    "langchain-qdrant>=0.2.0",
]

# Qdrant
